--- a/config/crds/apis.kcp.dev_apibindings.yaml
+++ b/config/crds/apis.kcp.dev_apibindings.yaml
@@ -121,24 +121,23 @@ spec:
                 description: reference uniquely identifies an API to bind to.
                 oneOf:
                 - required:
-                  - workspace
+                  - cluster
                 properties:
-                  workspace:
-                    description: workspace is a reference to an APIExport in the same
-                      organization. The creator of the APIBinding needs to have access
-                      to the APIExport with the verb `bind` in order to bind to it.
-                    oneOf:
-                    - required:
-                      - path
+                  absolute:
+                    description: cluster is a reference to an APIExport by cluster
+                      identifier or path and name. The creator of the APIBinding needs
+                      to have access to the APIExport with the verb `bind` in order
+                      to bind to it.
                     properties:
                       exportName:
-                        description: Name of the APIExport that describes the API.
+                        description: exportName is the name of the APIExport that
+                          describes the API.
                         type: string
-                      path:
-                        description: path is an absolute reference to a workspace,
-                          e.g. root:org:ws. If it is unset, the path of the APIBinding
-                          is used.
-                        pattern: ^root(:[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
+                      identifier:
+                        description: identifier is a logical cluster identifier where
+                          the APIExport is defined. If identifier and path are unset,
+                          the cluster of the APIBinding is used.
+                        pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
                         type: string
                     required:
                     - exportName
